--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
         "FLASK_APP": "app.py",
         "FLASK_DEBUG": "1"
       },
-      "args": ["run", "--no-debugger", "--no-reload"],
+      "args": ["run", "--no-debugger", "--no-reload", "--host=0.0.0.0"],
       "jinja": true,
       "justMyCode": true
     }
