--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "devDependencies": {
+    "@changesets/cli": "^2.27.1",
     "prettier": "^3.2.4",
     "prettier-plugin-jinja-template": "^1.3.2",
     "tailwindcss": "^3.4.1"
   },
   "scripts": {
-    "format": "prettier --write **/*.html",
-    "tailwind:build": "tailwindcss -i ./static/styles/base.css -o ./static/styles/base.css"
+    "format": "npx prettier --write **/*.html",
+    "tailwind:build": "npx tailwindcss -i ./static/styles/base.css -o ./static/styles/base.css"
   }
 }
