--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "padlock",
+  "version": "0.0.1",
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
     "prettier": "^3.2.4",
